Track foreign-preview API updates